# smokesignals

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: cloudflare.py  config.py  database.py  deps.py  main.py  models.py  push.py  schemas.py  security.py
backend/app/routers/: activities.py  activity_types.py  admin.py  auth.py  circles.py  friends.py  notifications.py  push.py  reactions.py  users.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  main.tsx  push.ts  styles.css  sw.ts  types.ts
frontend/src/components/: ActivityCard.tsx  Avatar.tsx  ContactButtons.tsx  EditGroupForm.tsx  EditTypeForm.tsx  FriendActionsMenu.tsx  Layout.tsx  Modal.tsx  Reactions.tsx
frontend/src/lib/: contacts.ts
frontend/src/pages/: Admin.tsx  BootstrapAdmin.tsx  Circles.tsx  Feed.tsx  Friends.tsx  History.tsx  Login.tsx  MapView.tsx  Notifications.tsx  Post.tsx  Profile.tsx  Register.tsx  Stats.tsx  UserProfile.tsx
