[project]
name = "smokesignals-backend"
version = "0.1.0"
description = "SmokeSignals - share activities with your circles"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pywebpush>=2.0.0",
    "email-validator>=2.1",
    "aiofiles>=23.2",
    "greenlet>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
